--- a/desktop/package.json
+++ b/desktop/package.json
@@ -20,8 +20,7 @@
       "../client/dist/**/*"
     ],
     "win": {
-      "target": "nsis",
-      "icon": "icon.ico"
+      "target": "nsis"
     },
     "nsis": {
       "oneClick": false,
