--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,12 @@
 PORT=3001
 JWT_SECRET=your-secret-key-change-this-in-production
 NODE_ENV=development
+CLIENT_URL=http://localhost:5173
+
+# Email Configuration (required for production)
+# For Render.com deployment, use SendGrid (free tier: 100 emails/day)
+# Sign up at: https://sendgrid.com/free/
+EMAIL_SERVICE=sendgrid
+EMAIL_API_KEY=your-sendgrid-api-key-here
+EMAIL_FROM=noreply@yourdomain.com
+EMAIL_FROM_NAME=SweetTeams
