--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.18.2",
-        "socket.io": "^4.6.1",
-        "jsonwebtoken": "^9.0.2",
+        "@sendgrid/mail": "^8.1.6",
         "bcryptjs": "^2.4.3",
-        "sqlite3": "^5.1.7",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "@sendgrid/mail": "^8.1.0"
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "socket.io": "^4.6.1",
+        "sqlite3": "^5.1.7"
     }
 }
