--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.1",
         "socket.io": "^4.6.1",
         "sqlite3": "^5.1.7"
     }
